api-server: implement /books/{vpath}/toc API
