# openapi/ebmgr.yaml
@@ -123,6 +123,33 @@ paths:
               schema:
                 type: string
                 format: binary
+  /books/{vpath}/toc:
+    get:
+      x-swagger-router-controller: Default
+      description: Returns the toc of the content
+      operationId: getToc
+      parameters:
+        - in: path
+          name: vpath
+          schema:
+            type: string
+          required: true
+          description: virtual path of the book
+      responses:
+        "404":
+          description: A book with the given vpath and page was not found
+        "403":
+          description: A book exists but cannot get toc
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "200":
+          description: A toc of the content
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Toc'
   /books/{vpath}/star:
     put:
       x-swagger-router-controller: Default
@@ -167,6 +194,17 @@ components:
         foo:
           bar: {}
         baz: {}
+    Toc:
+      type: object
+      properties:
+        src:
+          type: string
+          description: URL template for pages
+          example: /books/abcdefg/pages/%d
+        totalPages:
+          type: number
+          description: total pages of the content
+          example: 5
     Book:
       type: object
       properties:
